[package]
name = "polkadex-primitives"
version = "0.1.0"
authors = ["Gautham J <Gauthamastro@gmail.com>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "master" }

[dev-dependencies]
sp-serializer = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pretty_assertions = "0.6.1"

[features]
default = ["std", "full_crypto"]
std = [
    "codec/std",
    "serde",
    "frame-system/std",
    "scale-info/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-support/std",
]
full_crypto = ['sp-core/full_crypto']
