[package]
name = "polkadex-primitives"
version = "0.9.19"
authors = ["Gautham J <Gauthamastro@gmail.com>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.19" }
syn = "=1.0.96" # TODO: Remove this as soon as frame-support-procedural-tools becomes compilable with latest syn version

[dev-dependencies]
sp-serializer = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde",
    "frame-system/std",
    "frame-support/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
]
full_crypto = ['sp-core/full_crypto']
